vendor/error_handler.h


extern "C" void errorHandler(const char *format, ...);

extern "C" void argErrorHandler(int arg, const char * msg, void * data);

extern "C" void testFunction();